--- a/src/components/customs/FilterDropdown/filter.scss
+++ b/src/components/customs/FilterDropdown/filter.scss
@@ -18,7 +18,6 @@
     }
   }
 
-  
   .filter-form {
     position: absolute;
     top: 100%; // Position below the button
@@ -32,21 +31,20 @@
     z-index: 10;
 
     .form-group {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
 
       label {
         display: block;
-        font-size: 14px;
         font-weight: 500;
         color: #545f7d;
-        margin-bottom: 8px;
+        text-transform: capitalize;
+        margin-bottom: 6px;
       }
 
       input,
       select {
         width: 100%;
         padding: 10px;
-        font-size: 14px;
         border: 1px solid #dcdcdc;
         border-radius: 6px;
 
@@ -63,7 +61,6 @@
       .reset-btn,
       .filter-btn {
         padding: 10px 15px;
-        font-size: 14px;
         border-radius: 6px;
         flex-grow: 1;
         border: none;
@@ -94,7 +91,6 @@
       }
     }
   }
-  
 }
 
 select {
