--- a/src/components/Users/Card/card.scss
+++ b/src/components/Users/Card/card.scss
@@ -1,8 +1,8 @@
 @import "../../../assets/styles/variables";
 
 .card {
-  width: 180px;
-  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
+  min-width: 235px;
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
   border: 1px solid rgba(33, 63, 125, 0.06);
   border-radius: 4px;
   padding: 20px 30px;
@@ -18,7 +18,7 @@
   .value {
     font-size: 24px;
     font-weight: 600;
-    color: $navy-blue
+    color: $navy-blue;
   }
 
   &.loading {
@@ -44,6 +44,32 @@
     .value-skeleton {
       width: 60%;
       height: 24px;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  .card {
+    width: auto;
+    padding: 15px 25px;
+
+    .title {
+      font-size: 12px;
+      margin: 10px 0 8px;
+    }
+
+    .value {
+      font-size: 20px;
+    }
+
+    &.loading {
+      .title-skeleton {
+        height: 14px;
+      }
+
+      .value-skeleton {
+        height: 20px;
+      }
     }
   }
 }
