--- a/src/components/Users/Details/InfoCard/infocard.scss
+++ b/src/components/Users/Details/InfoCard/infocard.scss
@@ -13,28 +13,31 @@
 }
 
 .info-wrapper {
-  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
   border: 1px solid rgba(33, 63, 125, 0.06);
   border-radius: 4px;
-  padding: 30px 30px 0 30px;
+  padding: 30px 30px 0;
   @include flex(column, left, left, 30px);
 }
 
 ul.nav {
-  list-style-type: none;
-  padding: 0px;
+  list-style: none;
+  padding: 0;
+  overflow-x: scroll;
   @include flex(row, center, space-between);
+
   li {
     font-weight: 400;
     padding: 10px 25px;
-    text-wrap: nowrap;
+    white-space: nowrap;
     cursor: pointer;
+
     &:hover {
       color: $turquoise;
       @include transition(color);
     }
+
     &.active {
-      background-color: transparent;
       border-bottom: 2px solid $turquoise;
       color: $turquoise;
     }
@@ -50,6 +53,7 @@ ul.nav {
   height: 100px;
   border-radius: 50%;
   overflow: hidden;
+
   img {
     width: 100%;
     height: 100%;
@@ -58,23 +62,28 @@ ul.nav {
 }
 
 .details {
-  // @mixin flex($direction: row, $align: center, $justify: center, $gap: 0) {
   @include flex(row, center, left, 20px);
+
   .full-name {
     @include title();
   }
+
   .account-number {
     font-size: 14px;
     color: $slate-blue;
+  }
+
+  .stars {
+    display: none;
   }
 }
 
 .tier {
   @include subtitle();
-
   border-left: 1px solid #dedfe5;
   border-right: 1px solid #dedfe5;
   padding: 19px 30px;
+
   p {
     margin-bottom: 10px;
   }
@@ -82,54 +91,56 @@ ul.nav {
 
 .financials {
   @include subtitle();
+
   .amount {
     @include title();
   }
 }
 
-.loading-skeleton {
-  background-color: #e0e0e0;
-  border-radius: 50% !important;
-  animation: pulse 1.5s infinite;
-}
-
+.loading-skeleton,
 .loading-text {
   background-color: #e0e0e0;
   border-radius: 4px;
   animation: pulse 1.5s infinite;
+}
+
+.loading-skeleton {
+  border-radius: 50%;
+}
+
+.loading-text {
   &.full-name-skeleton {
     width: 120px;
     height: 22px;
     margin-bottom: 10px;
   }
+
   &.account-number-skeleton {
     width: 80px;
     height: 16px;
   }
+
   &.tier-skeleton {
     width: 100px;
     height: 16px;
     margin-bottom: 10px;
   }
+
   &.amount-skeleton {
     width: 80px;
     height: 22px;
     margin-bottom: 10px;
   }
+
   &.bank-details-skeleton {
     width: 150px;
     height: 16px;
   }
-  &.nav-skeleton {
-    width: 120px;
-    height: 20px;
-    margin: 5px 0;
-  }
 }
 
 .stars-skeleton {
-  display: flex;
-  gap: 10px;
+  @include flex(row, left, left, 10px);
+
   .loading-circle {
     width: 16px;
     height: 16px;
@@ -148,5 +159,32 @@ ul.nav {
   }
   100% {
     background-color: #e0e0e0;
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  .info-container {
+    @include flex(column, center, left, 20px);
+  }
+
+  .info-wrapper {
+    padding: 20px 20px 0;
+  }
+
+  .tier {
+    display: none;
+  }
+
+  .details {
+    width: 100%;
+    flex-wrap: wrap;
+
+    .stars {
+      display: block;
+    }
+  }
+
+  .financials {
+    width: 100%;
   }
 }
