--- a/src/components/Users/Details/details.scss
+++ b/src/components/Users/Details/details.scss
@@ -9,11 +9,12 @@
 
 .details-wrapper {
   margin-top: 30px;
-  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
   border: 1px solid rgba(33, 63, 125, 0.06);
   border-radius: 4px;
   padding: 30px;
   @include flex(column, left, left, 30px);
+
   p {
     color: $slate-blue;
     font-weight: 500;
@@ -42,8 +43,7 @@ h3 {
 }
 
 .section-item {
-  display: flex;
-  flex-direction: column;
+  @include flex(column, left, left);
 
   .title {
     font-size: 12px;
@@ -69,6 +69,7 @@ h3 {
   background-color: #e0e0e0;
   border-radius: 4px;
   animation: pulse 1.5s infinite;
+
   &.title-skeleton {
     width: 60%;
     height: 12px;
@@ -84,5 +85,23 @@ h3 {
   }
   100% {
     background-color: #e0e0e0;
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  h3 {
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .details-wrapper {
+    padding: 20px;
+  }
+
+  .section-body,
+  .skeleton-body {
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr) !important;
   }
 }
