--- a/src/components/Users/StatusPill/statuspill.scss
+++ b/src/components/Users/StatusPill/statuspill.scss
@@ -6,26 +6,24 @@
   text-transform: capitalize;
   width: fit-content;
   font-size: 14px;
-  color: $slate-blue;
-  background: #f5f5f7;
-}
 
-.inactive {
-  color: $slate-blue;
-  background: #f5f5f7;
-}
+  &.inactive {
+    color: $slate-blue;
+    background: #f5f5f7;
+  }
 
-.pending {
-  color: #e9b200;
-  background: #fdf7e5;
-}
+  &.pending {
+    color: #e9b200;
+    background: #fdf7e5;
+  }
 
-.blacklisted {
-  color: #e4033b;
-  background: #fde6eb;
-}
+  &.blacklisted {
+    color: #e4033b;
+    background: #fde6eb;
+  }
 
-.active {
-  color: #39cd62;
-  background: #f3fcf6;
+  &.active {
+    color: #39cd62;
+    background: #f3fcf6;
+  }
 }
