--- a/src/components/Users/Table/Pagination/pagination.scss
+++ b/src/components/Users/Table/Pagination/pagination.scss
@@ -1,7 +1,5 @@
 @import "../../../../assets/styles/variables";
 
-// @mixin flex($direction: row, $align: center, $justify: center, $gap: 0) {
-
 .pagination {
   @include flex(row, center, space-between);
   font-family: Arial, sans-serif;
@@ -56,14 +54,60 @@
 
     .pagination-button {
       background: #e5e8ee;
-    }
 
-    .prev {
-      rotate: 180deg;
+      &.prev {
+        rotate: 180deg;
+      }
     }
 
     .pagination-page.active {
       color: #213f7d;
+    }
+  }
+
+  .page-list {
+    display: none;
+
+    span {
+      margin: 0 5px;
+    }
+
+    .page {
+      padding: 4px 8px;
+      background-color: #e5e8ee;
+      font-weight: 500;
+      color: $navy-blue;
+      border: none;
+      border-radius: 4px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  .pagination {
+    @include flex(column, left, left, 10px);
+    margin-bottom: 20px;
+
+    .pagination-info {
+      @include flex(row, center, end, 10px);
+      width: 100%;
+    }
+
+    .pagination-controls {
+      display: none;
+    }
+
+    .page-list {
+      width: 100%;
+      @include flex(row, center, end, 10px);
+    }
+
+    .pagination-button,
+    .pagination-page {
+      font-size: 14px;
+      width: fit-content;
     }
   }
 }
