--- a/src/components/Users/Table/table.scss
+++ b/src/components/Users/Table/table.scss
@@ -5,7 +5,7 @@
 }
 
 table {
-  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
   border: 1px solid rgba(33, 63, 125, 0.06);
   border-radius: 4px;
   padding: 30px;
@@ -15,34 +15,37 @@ table {
     text-align: left;
     font-size: 12px;
     text-transform: uppercase;
-    text-wrap: nowrap;
     font-weight: 600;
     color: $slate-blue;
+
     .th-container {
       @include flex(row, left, left, 10px);
+
       img {
         cursor: pointer;
       }
     }
   }
+
   tr {
     cursor: pointer;
+
     &.row {
-      padding: 20px 0;
-
       &:last-child {
-        border-bottom: none; // No border for the last row
+        border-bottom: none;
       }
 
-      &:first-child {
-        margin-top: 36px; // Optional: Add spacing for the first row
+      &:first-child td {
+        padding-top: 36px;
       }
+
       &.skeleton-row td {
         padding: 20px 35px 20px 0;
         border-bottom: none;
       }
     }
   }
+
   td {
     padding: 20px 35px 20px 0;
     border-bottom: 1px solid rgba(33, 63, 125, 0.1);
@@ -50,9 +53,11 @@ table {
     word-wrap: break-word;
     hyphens: auto;
     max-width: 150px;
+
     &:last-child {
       padding: 20px 0;
     }
+
     .skeleton-loader {
       width: 100%;
       height: 16px;
@@ -61,11 +66,41 @@ table {
       animation: shimmer 1.5s infinite ease-in-out;
     }
   }
+
   .no-data {
     text-align: center;
     font-size: 14px;
     font-weight: 600;
     color: $slate-blue;
     border-bottom: none;
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  .table-container {
+    max-width: 95vw;
+    overflow: auto;
+    border: 1px solid rgba(33, 63, 125, 0.06);
+    border-radius: 4px;
+  }
+
+  .skeleton-loader {
+    height: 14px;
+  }
+
+  table {
+    border: none;
+  }
+
+  td {
+    max-width: 200px;
+    padding: 16px 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .footer-pagination {
+    display: none;
   }
 }
