--- a/src/components/customs/Sidebar/sidebar.scss
+++ b/src/components/customs/Sidebar/sidebar.scss
@@ -2,13 +2,17 @@
 
 nav {
   padding: 40px 0;
-  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.04);
-  width: 300px;
-  height: 79vh;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.04);
+  width: 283px;
+  height: 90vh;
+  overflow: hidden;
   position: sticky;
   top: 100px;
+  background-color: white;
+
   div {
     @include flex(column, left, left, 30px);
+
     .organization-switch {
       margin-bottom: 12px;
       @include flex(row, center, left, 10px);
@@ -17,9 +21,11 @@ nav {
       padding: 0 30px;
     }
   }
+
   ul {
     padding: 0;
     list-style-type: none;
+
     p {
       font-size: 12px;
       font-weight: 500;
@@ -27,28 +33,74 @@ nav {
       margin-bottom: 10px;
       padding: 0 30px;
     }
+
     li {
       @include flex(row, center, left, 10px);
       padding: 10px 30px;
       text-transform: capitalize;
       cursor: pointer;
+
       &:hover {
         background-color: #f3fcfc;
       }
+
       p {
         font-size: 16px;
-        padding: 0;
         margin: 0;
         font-weight: 400;
         color: #7a8cb1;
       }
+
       &.active {
         background-color: #f3fcfc;
         border-left: 3px solid $turquoise;
+
         p {
           color: $navy-blue;
         }
       }
+    }
+  }
+}
+
+.close {
+  display: none;
+}
+
+@media (max-width: $breakpoint-md) {
+  nav {
+    padding: 10px 0;
+  }
+
+  .close-container {
+    @include flex(row, right, right);
+    margin: 0 10px 20px 0;
+
+    .close {
+      display: block;
+      width: 40px;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+  .sidebar-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(10px);
+    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 200;
+    transform: translateY(-100%);
+    @include transition(transform);
+
+    &.open {
+      transform: translateY(0);
     }
   }
 }
